app/globals.css
/* ... */
.player-wrapper
  .player-overlay
  .controls-wrapper
  .controls-bar
  .slider::-moz-range-track {
  background-color: rgba(243, 242, 249, 0.5);
  border: 0;
  border-radius: 2px;
  height: 4px;
  -moz-user-select: none;
  user-select: none;
  background-image: linear-gradient(
    90deg,
    #f3f2f9 var(--value, 0),
    transparent var(--value, 0)
  );
  background-image: linear-gradient(
    90deg,
    var(--accentColor) var(--value, 0),
    transparent var(--value, 0)
  );
}

.player-wrapper
  .player-overlay
  .controls-wrapper
  .controls-bar
  .slider::-ms-track {
  background-color: rgba(243, 242, 249, 0.5);
  border: 0;
  border-radius: 2px;
  height: 4px;
  -ms-user-select: none;
  user-select: none;
  background-image: linear-gradient(
    90deg,
    #f3f2f9 var(--value, 0),
    transparent var(--value, 0)
  );
  background-image: linear-gradient(
    90deg,
    var(--accentColor) var(--value, 0),
    transparent var(--value, 0)
  );
}

.player-wrapper
  .player-overlay
  .controls-wrapper
  .controls-bar
  .slider::-webkit-slider-thumb {
  opacity: 0;
  background: #f3f2f9;
  height: 24px;
  margin-top: -10px;
  position: relative;
  width: 1px;
  -webkit-appearance: none;
  appearance: none;
}

.player-wrapper
  .player-overlay
  .controls-wrapper
  .controls-bar
  .slider::-moz-range-thumb {
  opacity: 0;
  background: #f3f2f9;
  height: 24px;
  margin-top: -10px;
  position: relative;
  width: 1px;
  -moz-appearance: none;
  appearance: none;
}

.player-wrapper
  .player-overlay
  .controls-wrapper
  .controls-bar
  .slider::-ms-thumb {
  opacity: 0;
  background: #f3f2f9;
  height: 24px;
  margin-top: -10px;
  position: relative;
  width: 1px;
  appearance: none;
}

.player-wrapper .player-overlay .controls-wrapper .controls-time {
  margin-left: var(--left-right-internal-margin);
  font-size: 0.75rem;
  font-family: studiofeixen-writer, studiofeixen, Arial, Helvetica, sans-serif;
  letter-spacing: -0.1em;
  text-align: center;
  color: #f3f2f9;
}

.player-wrapper .player-overlay .controls-wrapper .controls-fullscreen {
  display: flex;
  position: relative;
  justify-content: center;
  align-items: center;
  margin-left: var(--left-right-internal-margin);
  overflow: hidden;
  cursor: pointer;
  height: 40px;
  width: 40px;
}

.player-wrapper .player-overlay .controls-wrapper .controls-fullscreen svg {
  position: absolute;
  width: 17px;
  height: 17px;
  stroke: #f3f2f9;
}

body.dark .player-wrapper .player {
  background-color: #2b2b33;
}

body.dark .player-wrapper .player-preview .big-play-icon {
  background-color: #f3f2f9;
  background-color: var(--accentColorDark);
  box-shadow: 0 0 20px #606887;
  box-shadow: 0 0 20px var(--accentColor);
}

body.dark .player-wrapper .player-preview .big-play-icon svg {
  stroke: #606887;
  stroke: var(--accentColor);
}

body.dark .player-wrapper .player-overlay .controls-wrapper .controls-button {
  background-color: #f3f2f9;
  background-color: var(--accentColorDark);
}

body.dark
  .player-wrapper
  .player-overlay
  .controls-wrapper
  .controls-button
  svg {
  stroke: #606887;
  stroke: var(--accentColor);
}

body.dark
  .player-wrapper
  .player-overlay
  .controls-wrapper
  .controls-bar
  .slider::-webkit-slider-runnable-track {
  background-image: linear-gradient(
    90deg,
    #f3f2f9 var(--value, 0),
    transparent var(--value, 0)
  );
  background-image: linear-gradient(
    90deg,
    var(--accentColorDark) var(--value, 0),
    transparent var(--value, 0)
  );
}

.contact-content {
  margin-top: var(--top-internal-margin);
  display: flex;
  flex-direction: row;
}

@media (max-width: 61.99em) {
  .contact-content {
    flex-direction: column;
  }
}

.contact-content .contact-left,
.contact-content .contact-right {
  width: 50%;
}

@media (max-width: 61.99em) {
  .contact-content .contact-left,
  .contact-content .contact-right {
    width: 100%;
  }
}

.about-left .about-contact {
  margin-top: var(--top-internal-margin);
  width: 100%;
}

.about-left .about-contact .contact-content .contact-left table,
.about-left .about-contact .contact-content .contact-right table {
  width: 100%;
}

@media (max-width: 47.99em) {
  .contact-content table tbody tr {
    display: grid;
    grid-template-columns: 1fr;
    row-gap: 0.75rem;
    justify-items: center;
  }

  .contact-content table td {
    display: block;
    width: 100%;
    text-align: center;
  }

  .contact-content .link-wrapper {
    margin-inline: auto;
  }

  .contact-content .contact-right table td ul {
    display: grid;
    gap: 0.5rem;
    padding: 0;
    margin: 0;
    justify-items: center;
  }

  .contact-content .contact-right table td li {
    list-style: none;
  }

  .about-left .about-contact .page-head {
    align-items: center;
  }

  .about-left .about-contact .page-head .page-title {
    text-align: center;
  }
}

@media (max-width: 47.99em) {
  .about .page-head .page-title {
    text-align: center;
  }
}
footer {
  padding: 0 var(--left-right-margin) 0;
  width: 100%;
}

footer hr {
  margin-top: var(--top-margin);
}

footer .footer-wrapper {
  padding: var(--top-internal-margin) 0 var(--top-internal-margin);
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

footer .footer-wrapper .footer-right {
  text-align: right;
}

.home {
  width: 100%;
  height: inherit;
  justify-content: space-around;
  opacity: 1;
  transition: opacity 0.4s ease;
}

.home,
.home .intro-wrapper {
  position: relative;
  display: flex;
  flex-direction: column;
}

.home .intro-wrapper {
  height: calc(var(--innerVh, 1vh) * 100);
  justify-content: center;
  margin: 0 var(--left-right-margin);
}

@media (max-width: 47.99em) {
  .home .intro-wrapper {
    font-size: 1.5rem;
  }
}

.home .intro-wrapper .intro-text {
  position: relative;
  text-align: center;
  overflow: visible;
}

@media (max-width: 47.99em) {
  .home .intro-wrapper .intro-text {
    text-align: center;
  }
}
/* ... */

